Fix footer banner layout: use flexbox to prevent link wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -785,28 +785,31 @@ textarea{
 .footer{
   position:relative;
   width:100%;
-  height:90px;
+  min-height:90px;
   background:#23282d;
-
 }
 
 .footer .margin{
   position:relative;
   width:900px;
   margin:0 auto;
-  height:90px;
+  min-height:90px;
+  display:flex;
+  flex-wrap:nowrap;
+  align-items:center;
+  justify-content:space-between;
 }
 
 .footer .margin .menu-footer{
-  width:450px;
-  margin:0 auto;
-  float:left;
+  display:flex;
+  flex-wrap:nowrap;
+  align-items:center;
 }
 
 
 .footer .margin .menu-footer a{
-  line-height:90px;
-  padding-right:25px;
+  white-space:nowrap;
+  padding-right:20px;
   color:#5f666e;
   -webkit-transition: all 0.2s ease-in;
 	-moz-transition: all 0.2s ease-in;
@@ -821,11 +824,8 @@ textarea{
 
 
 .footer .margin .copyright{
-  width:420px;
-  margin:0 auto;
+  white-space:nowrap;
   text-align:right;
-  float:left;
-  line-height:90px;
   padding-right:25px;
   color:#5f666e;
 }
